# video-classifier

./: README.md  model.py  pyproject.toml  requirements.txt  train.py
tool/: annotation.py
