[project]
name = "video-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchcodec>=0.3 ; sys_platform != 'win32'",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
    "opencv-python>=4.11.0.86 ; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
